# couchbase-examples
# Copyright (C) 2011 Couchbase, INC
# All rights reserved.
#
AC_PREREQ(2.59)
m4_include([m4/version.m4])
AC_INIT(couchbase-examples, VERSION_NUMBER, bin@couchbase.com)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE
AC_CONFIG_FILES(Makefile wrapper/wrapper)
AC_SUBST([localstatedatdir], [${prefix}/samples])
AC_SUBST([localbindir], [${prefix}/bin/tools])

AC_OUTPUT
